[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vsbasicvsrpp"
version = "2.0.0"
description = "BasicVSR++ function for VapourSynth"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "HolyWu", email = "holywu@gmail.com"}]
keywords = ["BasicVSR++", "VapourSynth"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Video"
]
dependencies = [
  "mmcv>=2.0.0",
  "numpy",
  "requests",
  "torch>=1.13.1",
  "torchvision>=0.14.1",
  "tqdm",
  "VapourSynth>=60"
]

[project.urls]
"Homepage" = "https://github.com/HolyWu/vs-basicvsrpp"
"Bug Tracker" = "https://github.com/HolyWu/vs-basicvsrpp/issues"
