[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vsbasicvsrpp"
version = "3.0.0"
description = "BasicVSR++ function for VapourSynth"
readme = "README.md"
requires-python = ">=3.10"
license-files = { paths = ["LICENSE"] }
authors = [
  { name = "HolyWu", email = "holywu@gmail.com" },
]
keywords = [
  "BasicVSR++",
  "PyTorch",
  "VapourSynth",
]
classifiers = [
  "Environment :: GPU :: NVIDIA CUDA",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Video",
]
dependencies = [
  "mmengine",
  "numpy",
  "requests",
  "torch>=2.5.1",
  "torchvision>=0.20.1",
  "tqdm",
  "VapourSynth>=66",
]

[project.urls]
Homepage = "https://github.com/HolyWu/vs-basicvsrpp"
Issues = "https://github.com/HolyWu/vs-basicvsrpp/issues"
