[metadata]
name = vsbasicvsrpp
version = 1.2.0
author = HolyWu
description = BasicVSR++ function for VapourSynth
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HolyWu/vs-basicvsrpp
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Video

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    mmcv-full>=1.3.13
    numpy
    torch>=1.9.0
    torchvision

[options.package_data]
* = *.pth
